--- a/timelineBocaJuniors.html
+++ b/timelineBocaJuniors.html
@@ -6,6 +6,6 @@
   <title>Copa Internacionales Boca</title>
 </head>
 <body>
-<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1o1gYlxCY2gVB4k1MHmxAvQwpWoLOBgy82mvUMA-3eEs&font=Default&lang=en&start_at_end=true&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1o1gYlxCY2gVB4k1MHmxAvQwpWoLOBgy82mvUMA-3eEs&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 </body>
 </html>
